Sunday, October 10th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Changed CXXFLAGS to AM_CXXFLAGS in the atlas
	  Makefile.am to fix a configure warning.
	* Change a comma operator in an assert() to && to
	  fix a compile warning.

Saturday, October 9th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added missing 'inline' keywords in int_to_string.h.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Minor update to the rpm spec. No need to re-spin the release.

Wednesday, July 19th, 2004   Ron Steinke <rsteinke@w-link.net>

	* 0.3.3 release.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes, part 2.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates

Saturday, March 6th, 2004 Al Riddoch <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Add typedefs so the tests still work
	  with the 0.4 series.

Wednesday, March 3rd, 2004 James Turner <james@worldforge.org>

	* Made atlasconv.h use the new Atlas::Message public typdefs, instead
	  of the current Element typedefs, which are becoming private.
	* ProjectBuilder updates for X-Code 
	
Wednesday, February 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Fixed 'no newline at end of file' warning for timestamp_test.cpp.

Sunday, February 15th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Changed the Atlas forward declaration workaround to return
	  a reference to Atlas::Message::Element instead of a copy.

Thursday, February 5th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Got the fooCorner() fix right.
	* 0.3.2 release! for the last time!

Wednesday, February 4th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added wfmath.spec to EXTRA_DIST to ease rpm building.
	* 0.3.2 release! (no, really! this time I mean it!)
