@@ -7,8 +7,12 @@ Summary: A math library.
 Name: %{name}
 Version: %{version}
 Release: %{release}
-Copyright: GPL
+License: GPL
 Group: System Environment/Libraries
+URL: http://www.worldforge.org/dev/eng/libraries/wfmath
+Packager: Al Riddoch <alriddoch@zepler.org>
+Vendor: WorldForge
+Distribution: Mason
 Source: %{name}-%{version}.tar.gz
 Requires: libstdc++
 BuildRoot: %{_tmppath}/%{name}-%{version}-buildroot
